[tool.poetry]
name = "tsppy"
version = "0.1.0"
description = ""
authors = ["nishide-dev <nishide.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
statsmodels = "^0.14.1"
darts = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
